fix: Give NavArrow buttons a greater z-index

--- a/src/components/NavArrow/styles.css
+++ b/src/components/NavArrow/styles.css
@@ -8,6 +8,7 @@
   height: 150px;
   text-decoration: none;
   color: white;
+  z-index: 10;
 }
 
 .nav-up {
